# guile-gdal

./: .gitignore  Makefile.am  README.md  configure.ac  gdal.scm  guix.scm  pre-inst-env.in
examples/raster/: raster-small.txt  read-raster.scm  write-raster.scm
gdal/: config.scm.in  extension.scm  internal.scm  ogr.scm
m4/: guile.m4
